src/main/java/example/validator/error/errorCode/ErrorCode.java
package example.validator.error.errorCode;

public interface ErrorCode {
    String getCode();
}
